// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationModal > styles > should render with an SVG 1`] = `
.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background: var(--cui-bg-overlay);
  z-index: 1000;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
  }
}

.circuit-1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: calc(100vw - 40px * 2);
  max-width: 420px;
  max-height: calc(100vh - 16px * 2);
  outline: none;
  background-color: var(--cui-bg-elevated);
  border-radius: 16px;
  padding: 24px;
  text-align: center;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  overflow-y: auto;
}

@media (max-width: 479px) {
  .circuit-1 {
    -webkit-overflow-scrolling: touch;
  }
}

.circuit-2 {
  position: absolute;
  top: 8px;
  right: 8px;
}

@media (min-width: 480px) {
  .circuit-2 {
    top: 16px;
    right: 16px;
  }
}

.circuit-3 {
  max-width: 232px;
  height: 120px;
  object-fit: contain;
  margin: 0 auto 24px;
}

.circuit-4 {
  height: 100%;
  width: 100%;
}

.circuit-5 {
  margin-bottom: 8px;
}

.circuit-6 {
  margin-top: 24px;
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <button
          class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a _base_9bf092 circuit-2"
          title="Close modal"
          type="button"
        >
          <span
            class="_base_2b3edd _byte_2b3edd _spinner_892426"
          >
            <span
              class="_hide-visually_73b4bb"
            />
          </span>
          <span
            class="_content_892426"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="_hide-visually_73b4bb"
            >
              Close modal
            </span>
          </span>
        </button>
        <div
          class="circuit-3"
        >
          <svg
            aria-hidden="true"
            class="circuit-4"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 12c0 .5-.4 1-1 1h-8v8c0 .5-.4 1-1 1s-1-.5-1-1v-8H3c-.5 0-1-.5-1-1s.5-1 1-1h8V3c0-.5.4-1 1-1s1 .5 1 1v8h8c.6 0 1 .5 1 1z"
              fill="currentColor"
            />
          </svg>
        </div>
        <h2
          class="_base_20bab7 _three_20bab7 circuit-5"
        >
          It's time to update your browser
        </h2>
        <p
          class="_base_537b83 _one_537b83"
        >
          You'll soon need a more up-to-date browser to continue using SumUp.
        </p>
        <div
          class="_base_fd5359 _center_fd5359 circuit-6"
        >
          <button
            class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
          >
            <span
              class="_base_2b3edd _byte_2b3edd _spinner_892426"
            >
              <span
                class="_hide-visually_73b4bb"
              />
            </span>
            <span
              class="_content_892426"
            >
              Update now
            </span>
          </button>
          <button
            class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _secondary_fd5359"
          >
            <span
              class="_base_2b3edd _byte_2b3edd _spinner_892426"
            >
              <span
                class="_hide-visually_73b4bb"
              />
            </span>
            <span
              class="_content_892426"
            >
              Not now
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationModal > styles > should render with default styles 1`] = `
.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background: var(--cui-bg-overlay);
  z-index: 1000;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
  }
}

.circuit-1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: calc(100vw - 40px * 2);
  max-width: 420px;
  max-height: calc(100vh - 16px * 2);
  outline: none;
  background-color: var(--cui-bg-elevated);
  border-radius: 16px;
  padding: 24px;
  text-align: center;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  overflow-y: auto;
}

@media (max-width: 479px) {
  .circuit-1 {
    -webkit-overflow-scrolling: touch;
  }
}

.circuit-2 {
  position: absolute;
  top: 8px;
  right: 8px;
}

@media (min-width: 480px) {
  .circuit-2 {
    top: 16px;
    right: 16px;
  }
}

.circuit-3 {
  max-width: 232px;
  height: 120px;
  object-fit: contain;
  margin: 0 auto 24px;
}

.circuit-4 {
  margin-bottom: 8px;
}

.circuit-5 {
  margin-top: 24px;
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <button
          class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a _base_9bf092 circuit-2"
          title="Close modal"
          type="button"
        >
          <span
            class="_base_2b3edd _byte_2b3edd _spinner_892426"
          >
            <span
              class="_hide-visually_73b4bb"
            />
          </span>
          <span
            class="_content_892426"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="_hide-visually_73b4bb"
            >
              Close modal
            </span>
          </span>
        </button>
        <img
          alt=""
          class="_base_1174d4 circuit-3"
          src="/images/illustration-update-browser.svg"
        />
        <h2
          class="_base_20bab7 _three_20bab7 circuit-4"
        >
          It's time to update your browser
        </h2>
        <p
          class="_base_537b83 _one_537b83"
        >
          You'll soon need a more up-to-date browser to continue using SumUp.
        </p>
        <div
          class="_base_fd5359 _center_fd5359 circuit-5"
        >
          <button
            class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
          >
            <span
              class="_base_2b3edd _byte_2b3edd _spinner_892426"
            >
              <span
                class="_hide-visually_73b4bb"
              />
            </span>
            <span
              class="_content_892426"
            >
              Update now
            </span>
          </button>
          <button
            class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _secondary_fd5359"
          >
            <span
              class="_base_2b3edd _byte_2b3edd _spinner_892426"
            >
              <span
                class="_hide-visually_73b4bb"
              />
            </span>
            <span
              class="_content_892426"
            >
              Not now
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationModal > styles > should render without an image 1`] = `
.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background: var(--cui-bg-overlay);
  z-index: 1000;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
  }
}

.circuit-1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: calc(100vw - 40px * 2);
  max-width: 420px;
  max-height: calc(100vh - 16px * 2);
  outline: none;
  background-color: var(--cui-bg-elevated);
  border-radius: 16px;
  padding: 24px;
  text-align: center;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  overflow-y: auto;
}

@media (max-width: 479px) {
  .circuit-1 {
    -webkit-overflow-scrolling: touch;
  }
}

.circuit-2 {
  position: absolute;
  top: 8px;
  right: 8px;
}

@media (min-width: 480px) {
  .circuit-2 {
    top: 16px;
    right: 16px;
  }
}

.circuit-3 {
  margin-bottom: 8px;
  max-width: 80%;
  margin-right: auto;
  margin-left: auto;
}

.circuit-4 {
  margin-top: 24px;
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <button
          class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a _base_9bf092 circuit-2"
          title="Close modal"
          type="button"
        >
          <span
            class="_base_2b3edd _byte_2b3edd _spinner_892426"
          >
            <span
              class="_hide-visually_73b4bb"
            />
          </span>
          <span
            class="_content_892426"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="_hide-visually_73b4bb"
            >
              Close modal
            </span>
          </span>
        </button>
        <h2
          class="_base_20bab7 _three_20bab7 circuit-3"
        >
          It's time to update your browser
        </h2>
        <p
          class="_base_537b83 _one_537b83"
        >
          You'll soon need a more up-to-date browser to continue using SumUp.
        </p>
        <div
          class="_base_fd5359 _center_fd5359 circuit-4"
        >
          <button
            class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
          >
            <span
              class="_base_2b3edd _byte_2b3edd _spinner_892426"
            >
              <span
                class="_hide-visually_73b4bb"
              />
            </span>
            <span
              class="_content_892426"
            >
              Update now
            </span>
          </button>
          <button
            class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _secondary_fd5359"
          >
            <span
              class="_base_2b3edd _byte_2b3edd _spinner_892426"
            >
              <span
                class="_hide-visually_73b4bb"
              />
            </span>
            <span
              class="_content_892426"
            >
              Not now
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
